# BIP_PAI

./: README.md  create_tables.py  main.py  new_data.py  personalized.py  pyproject.toml  requirements.txt  sheet.csv  synthetic_leads.csv  upload_file_superbase.py
crud/: projects.py
database/: base.py  config.py
models/: projects.py
schema/: projects.py
utility/: ai_generated_ice_breakers.py  batched_output.csv  batching.py  column_names.py  company_linkedIn_data.py  email_verifier.py  exa_webite_summary.py  google_sheet_handeling.py  priority_score.py
